# eda-bam

./: README.md  pyproject.toml
notebook/: built-in-function.ipynb  chart.ipynb  count.ipynb  first.ipynb  test.ipynb
src/eda_bam/: cli.py
tests/: test_search_n_sort.py  test_search_speech.py
