[project]
name = "eda-bam"
version = "0.1.0"
description = "Navigating data from one thing to another."
authors = [
    {name = "ppabam", email = "tom@diginori.com"},
]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
